--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -6,4 +6,11 @@
 @import url("../fonts/fonts.scss");
 // common styles
 @import url("common/index.scss");
+// home
 @import url("home/home.scss");
+// about-us
+@import url("aboutus/about_us.scss");
+// contact-us
+@import url("contactus/contactus.scss");
+// contact-us
+@import url("carrers/carrers.scss");
