--- a/src/assets/styles/sass/index.css
+++ b/src/assets/styles/sass/index.css
@@ -1,4 +1,7 @@
 @import url("./tailwind/index.scss");
 @import url("../fonts/fonts.scss");
 @import url("common/index.scss");
-@import url("home/home.scss");/*# sourceMappingURL=index.css.map */
+@import url("home/home.scss");
+@import url("aboutus/about_us.scss");
+@import url("contactus/contactus.scss");
+@import url("carrers/carrers.scss");/*# sourceMappingURL=index.css.map */
