--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -12,5 +12,7 @@
 @import url("aboutus/about_us.scss");
 // contact-us
 @import url("contactus/contactus.scss");
-// contact-us
+// carrers
 @import url("carrers/carrers.scss");
+// carrers-details
+@import url("carrersdetails/carrersdetails.scss");
