--- a/src/assets/styles/sass/index.css
+++ b/src/assets/styles/sass/index.css
@@ -4,4 +4,5 @@
 @import url("home/home.scss");
 @import url("aboutus/about_us.scss");
 @import url("contactus/contactus.scss");
-@import url("carrers/carrers.scss");/*# sourceMappingURL=index.css.map */
+@import url("carrers/carrers.scss");
+@import url("carrersdetails/carrersdetails.scss");/*# sourceMappingURL=index.css.map */
