--- a/src/assets/styles/sass/common/index.scss
+++ b/src/assets/styles/sass/common/index.scss
@@ -35,6 +35,9 @@ h5 {
 h6 {
   font-size: 1.4rem;
 }
+p {
+  line-height: 1.5;
+}
 .btn-primary {
   background: linear-gradient(253.41deg, #00c8dc 0%, #0abe50 100%);
 }
