--- a/src/assets/styles/sass/index.css
+++ b/src/assets/styles/sass/index.css
@@ -5,4 +5,5 @@
 @import url("aboutus/about_us.scss");
 @import url("contactus/contactus.scss");
 @import url("carrers/carrers.scss");
-@import url("carrersdetails/carrersdetails.scss");/*# sourceMappingURL=index.css.map */
+@import url("carrersdetails/carrersdetails.scss");
+@import url("payment/payment.scss");/*# sourceMappingURL=index.css.map */
