--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -16,3 +16,5 @@
 @import url("carrers/carrers.scss");
 // carrers-details
 @import url("carrersdetails/carrersdetails.scss");
+// payment
+@import url("payment/payment.scss");
